--- a/FarmaEnlace/FarmaEnlace/Resources/Resource.resx
+++ b/FarmaEnlace/FarmaEnlace/Resources/Resource.resx
@@ -333,4 +333,7 @@
   <data name="ErrorMessage" xml:space="preserve">
     <value>Dear user, please try again.</value>
   </data>
+  <data name="ErrorGPSDenied" xml:space="preserve">
+    <value>Dear user, the Location service has been denied for this app. If you want to use its features you have to go to your phone settings and enable or reset this permissions.</value>
+  </data>
 </root>
